@@ -8,7 +8,9 @@
  <property name="acl_directory_view_roles">Manager; Member</property>
  <property name="acl_entry_create_roles">Manager</property>
  <property name="acl_entry_delete_roles">Manager</property>
- <property name="acl_entry_view_roles">Manager; GroupMember</property>
+ <!-- switch back to GroupMember instead of Member once searchEntries will be
+      able to check ACLs -->
+ <property name="acl_entry_view_roles">Manager; Member</property>
  <property name="acl_entry_edit_roles">Manager</property>
  <property name="id_field">group</property>
  <property name="title_field">group</property>
