@@ -23,6 +23,8 @@ Bug fixes:
 - #1560 "Non-Member users cannot log in (with no error message)" they can now
   login but they don't have any member home created
 - zpt_calendar was specified in the skins, but is now called cmf_zpt_calendar.
+- #1541 relaxed ACL checking on default directories since searchEntries is not
+  (yet) ACL aware at the entry level
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Add CSS class for comments display listed.
